# skein3-AI

./: .gitignore  CMakeLists.txt  README  README.md  main.cpp  readme_test.cpp
docs/: ROADMAP.md  algorithm-comparison.md  api-reference.md  benchmarks.md  enterprise.md  installation.md  performance.md  security-features.md
examples/: basic_test.cpp  commercial_usage.cpp  comprehensive_test.cpp  customization_test.cpp  error_handling_test.cpp  integration_test.cpp  license_test.cpp  memory_test.cpp  parallel_test.cpp  performance_benchmark.cpp  performance_metrics_test.cpp  performance_test.cpp  security_benchmark.cpp  security_test.cpp
include/: adaptive_security.h  ai_protection.h  base64.h  blockchain_features.h  hardware_security.h  license.h  memory_protection.h  neural_adaptation.h  performance_metrics.h  security_monitor.h  skein3.h  thread_pool.h  threefish3.h
skein3-admin/: .gitignore  CMakeLists.txt  README.md
skein3-admin/tools/license/: license_generator.cpp
src/: adaptive_security.cpp  ai_protection.cpp  base64.cpp  blockchain_features.cpp  license.cpp  performance_metrics.cpp  security_monitor.cpp  skein3.cpp  thread_pool.cpp  threefish3.cpp
tests/: test_skein3.cpp
